# fortianalyzer-mcp-server

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: config.example.json
contrib/: fortianalyzer-mcp.service
src/fortianalyzer_mcp/: __init__.py  server_http.py
src/fortianalyzer_mcp/config/: __init__.py  loader.py  models.py
src/fortianalyzer_mcp/core/: __init__.py  faz_client.py  logging.py
src/fortianalyzer_mcp/formatting/: __init__.py
src/fortianalyzer_mcp/tools/: __init__.py  base.py  device.py  modules.py
tests/: conftest.py  test_core.py
